main | Fix spacing on index page image.

--- a/src/components/globalStyles.module.css
+++ b/src/components/globalStyles.module.css
@@ -2,6 +2,10 @@
   font-weight: 800;
 }
 
+.spaced-section {
+  margin: 50px 0;
+}
+
 .centered {
   text-align: center;
 }
